# RKNN_YOLO_series

./: .gitignore  CMakeLists.txt  README.md  conver_ONNX2RKNN.py
YOLO_V5/: README.md
YOLO_V5/deploy_demo/: CMakeLists.txt  main.cc
YOLO_V5/deploy_demo/include/: postprocess.h  yolov5.h
YOLO_V5/deploy_demo/src/: postprocess.cc  yolov5.cc
YOLO_V8/: README.md
YOLO_V8/deploy_demo/: CMakeLists.txt  main.cc
YOLO_V8/deploy_demo/include/: postprocess.h  yolov8.h
YOLO_V8/deploy_demo/src/: postprocess.cc  yolov8.cc
YOLO_V8/yolov8/: README.md  README.zh-CN.md  RKOPT_README.md  RKOPT_README.zh-CN.md  example_train.py  pedestrian.yaml
YOLO_V8/yolov8/ultralytics/cfg/: default.yaml  default_副本.yaml
YOLO_V8/yolov8/ultralytics/data/: augment.py  base.py
YOLO_V8/yolov8/ultralytics/engine/: exporter.py
YOLO_V8/yolov8/ultralytics/nn/: autobackend.py  modules.py
YOLO_V8/yolov8/ultralytics/nn/modules/: head.py
YOLO_V8/yolov8/ultralytics/utils/: torch_utils.py
resuorce/yaml/: CircleTarget.yaml
